# pdftree

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pdftree/: actions.py  app.py  events.py  gtk_adaptor.py  gui.py  pdf_operators.py  pdf_utils.py  screens.py  styles.tcss  tree_utils.py  widgets.py
tests/: conftest.py  test_app.py  test_extra.py  test_extra_2.py  test_gtk_adaptor.py  test_pdf_utils.py  test_tree_utils.py
